# claude-code-sdk-python

./: .gitignore  CLAUDE.md  LICENSE  README.md  TUTORIAL.md  integration_test.py  pyproject.toml
.claude/: settings.local.json
claude_code/: __init__.py  client.py  conversation.py  types.py
claude_code/auth/: __init__.py  provider.py  types.py
claude_code/exceptions/: __init__.py
claude_code/utils/: __init__.py  subprocess.py
docs/: examples.md  index.md
docs/api/: auth.md  client.md  conversation.md  exceptions.md  index.md  types.md
examples/: aws_bedrock.py  basic_usage.py  google_vertex.py  mcp_config.py  mock_example.py
tests/: conftest.py
tests/unit/: test_auth.py  test_client.py  test_conversation.py  test_subprocess.py  test_types.py
